--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
 spring.application.name=stay-service
-spring.data.mongodb.uri=mongodb://localhost:27017/admin
+//spring.data.mongodb.uri=${MONGODB_URI}
