updated code changes to fix bugs and update validations

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 spring.application.name=stay-service
+spring.data.mongodb.uri=mongodb+srv://ravikiranvv:walnut16@travelapp-cluster.mcuagnc.mongodb.net/travelapp?retryWrites=true&w=majority
 //spring.data.mongodb.uri=${MONGODB_URI}
